fixtures/compile-error/Byte.cpp
#include "Byte.h"

Byte::Byte(int value) : value(value) {}

int Byte::toInt() const {
    return value
}
